--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -22,8 +22,8 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of a \bronze\ Unit of your choice
-  \item A Pack of a \bronze\ Unit of your choice
+  \item A Few \bronze\ Units of your choice
+  \item A Pack of \bronze\ Units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling
