Updated starting army arcane_artillery.tex (#197)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>

--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -22,7 +22,8 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of each \bronze\ Unit
+  \item A Few \bronze\ Units of your choice
+  \item A Pack of \bronze\ Units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling
