Add caching to drafts

--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -315,7 +315,7 @@
   \vspace{\lang_header_adjustment}
 }
 
-% Apply language-specific subsection spacings if defined.
+% Apply language-specific subsection spacings if defined
 \ifdefined\subsectionspacing
   \subsectionspacing{}
 \fi
