--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -53,14 +53,14 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item Before game, remove all cards granting resources (including those with one of the options) from their respective Decks, and form a \textbf{Resource Cards} pool. They will be available at specific locations throughout the Scenario. If any of these cards is removed from game, it goes back to the pool.
+  \item Before game, remove all Cards granting resources (including those with one of the options) from their respective Decks, and form a \textbf{Resource Cards} pool. They will be available at specific locations throughout the Scenario. If any of these Cards is removed from game, it goes back to the pool.
   \item Lord Haart's starting \textit{Estates} Ability is replaced with \textit{Scouting}.
   \item At the start of certain Rounds, players must send a \textbf{tranche} to their lieges. The tranche value is expressed in \svg{gold}, but may be partially or entirely paid in other resources using these exchange rates: 1 \svg{building_materials} equals 2 \svg{gold} and 1 \svg{valuables} equals 4 \svg{gold}, with no change given. In Alliance mode, allied players collectively pay a single tranche. Any player or team unable to pay loses the game immediately.
   \item The difficulty of all Fields on the \#C1 Tile is lowered by one Level (effectively making it a ``V-VI'' Tile).
   \item Certain locations have special rules, typically allowing players to acquire \textbf{Resource Cards} -- refer to the table at the next page.
   \item A Hero carrying the Grail Token is not protected by the \textit{Sanctuary} effect.
   \item If a Hero carrying the Grail Token surrenders or is defeated by an enemy Hero, they give the Token to the opponent.
-  \item If a Hero carrying the Grail Token is defeated by a Neutral Army, the Grail token is placed on the field where the Hero was defeated. Any hero visiting this filed takes the Token and loses all remaining \svg{movement}.
+  \item If a Hero carrying the Grail Token is defeated by a Neutral Army, the Grail token is placed on the Field where the Hero was defeated. Any Hero visiting this Filed takes the Token and loses all remaining \svg{movement}.
   \item When defeating an enemy Main Hero, the victorious player may, instead of taking \mbox{5 \svg{gold}}, choose and take one Artifact from the opponent's Discard Pile.
 \end{itemize}
 
@@ -159,7 +159,7 @@ Players must pay tranches at the start of specific Rounds, as shown in the table
     }
   \footnotesize{* Including Quick Combat. Bypassing without visiting the Field (such as with the \textit{Pathfinding} Ability) is still allowed.}
 
-  \footnotesize{** For example: if you choose increasing \svg{valuables} production, you increase it by two levels and get 10 \svg{valuables} if you are first player to Flag this settlement. If you choose reinforcement, you may reinforce two units.}
+  \footnotesize{** For example: if you choose increasing \svg{valuables} production, you increase it by two and get 10 \svg{valuables} if you are first player to Flag this settlement. If you choose reinforcement, you may reinforce two Units.}
 \end{table*}
 
 
