--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -54,7 +54,7 @@ Before this Scenario:
 \begin{itemize}
   \item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic).
     A player may gain only Minor Artifacts on Starting or Far Tiles, Minor or Major Artifacts on Near Tiles, and Major or Relic Artifacts on Center Tiles.
-  \item Split the Spell Deck into 2 separate Decks (Basic and Expert Spells). Magic Arrow is a Baiic Spell.
+  \item Split the Spell Deck into 2 separate Decks (Basic and Expert Spells). Magic Arrow is a Basic Spell.
     A player may gain only Basic Spells on Starting or Far Tiles, Expert Spells on Near or Center Tiles.
 \end{itemize}
 
