Trigger build for FR?

--- a/translations/notes.tex/fr.po
+++ b/translations/notes.tex/fr.po
@@ -29,4 +29,4 @@ msgid ""
 "[remember picture, overlay, blend mode=multiply]\n"
 "  \\node[inner sep=0, opacity=0.44] at (current page.center)\n"
 "  {\\includegraphics[width=\\paperwidth, height=\\paperheight]{\\layout/citadel_background.jpg}};"
-msgstr ""
+msgstr "No need"
