--- a/draft-scenarios/clash/main.tex
+++ b/draft-scenarios/clash/main.tex
@@ -19,3 +19,15 @@
 \clearpage
 
 \input{clash/dragon_valley.tex}
+
+\clearpage
+
+\input{clash/shattered_alliance.tex}
+
+\clearpage
+
+\input{clash/king_of_the_hill.tex}
+
+\clearpage
+
+\input{clash/king_of_the_hill_v2.tex}
