--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} KABLAMIO & Cantila
+\textbf{Author:} KABLAMIO \& Cantila
 
 \textbf{Source:} \href{https://discord.com/channels/1275490124301467799/1284428969369665631}{KABLAMIO's Discord}
 
